--- a/CarRentalSystem/Web.config
+++ b/CarRentalSystem/Web.config
@@ -7,7 +7,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+
   </configSections>
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -17,6 +19,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <authentication mode="Forms">
+      <forms name="cookies" timeout="2880" loginUrl="~/Account/Login" />
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -51,7 +56,9 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="CarRentalSystemContext" connectionString="Data Source=HOME\WEBSTORE;Initial Catalog=CarRentalSystemContext;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="CarRentalSystemContext" connectionString="Data Source=HOME\WEBSTORE;
+         Initial Catalog=CarRentalSystemContext;
+         Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
