--- a/CarRentalSystem/CarRentalSystem.csproj
+++ b/CarRentalSystem/CarRentalSystem.csproj
@@ -226,6 +226,8 @@
     <Content Include="Views\Account\Index.cshtml" />
     <Content Include="Views\Cars\Index.cshtml" />
     <Content Include="Views\Cars\ConfirmOrder.cshtml" />
+    <Content Include="Views\Account\Profile.cshtml" />
+    <Content Include="Views\Account\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
