fixed problem with cancel order

--- a/CarRentalSystem.DAL/CarRentalSystem.DAL.csproj
+++ b/CarRentalSystem.DAL/CarRentalSystem.DAL.csproj
@@ -255,6 +255,10 @@
     <Compile Include="Migrations\201611260847419_initial30.Designer.cs">
       <DependentUpon>201611260847419_initial30.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201611271244064_initial31.cs" />
+    <Compile Include="Migrations\201611271244064_initial31.Designer.cs">
+      <DependentUpon>201611271244064_initial31.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Car\Body.cs" />
     <Compile Include="Models\Car\Car.cs" />
@@ -389,6 +393,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201611260847419_initial30.resx">
       <DependentUpon>201611260847419_initial30.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611271244064_initial31.resx">
+      <DependentUpon>201611271244064_initial31.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
